Added background module

--- a/src/main/resources/popup.html
+++ b/src/main/resources/popup.html
@@ -38,8 +38,10 @@
     <script src="popup.js"></script>
   </head>
   <body>
-    <h1> Background Color Changer</h1>
-    <div id="message">trololo</div>
+    <h1> Crawl Music Extension</h1>
+    <div id="location">Location: N/A</div>
+    <br/>
+    <div id="playing">Playing: Nothing</div>
     <div id="container">
       <span>Choose a color</span>
       <select id="dropdown">
